Changelog
=========

2.3 (unreleased)
----------------

- Check that a classifier specifies the project license. [4383]

- Dropped support for Python 2.6, 3.3 and 3.4.

- Fixed a unicode issue [gotcha]


2.2 (2016-10-26)
----------------

- Removed the TestSuite rating. I decided it was too close to looking at
  code quality. Pyroma no longer cares if you have tests or not.

- Fixed #36: PyPI now requires https.


2.1 (2016-10-18)
----------------

- #35: Support for PEP-440.


2.0.2 (2016-03-06)
------------------

- Faked the __name__ variable to allow you to have a "if __name__" construct
  in the setup.py.


2.0.1 (2016-03-06)
------------------

- Fixed a bug under Python 3 with certain imports.


2.0.0 (2016-02-28)
------------------

- Stable release.


2.0.0b2 (2015-11-09)
--------------------

- Made it run under Python 3 again.

- PEP8


2.0.0b1 (2015-11-08)
--------------------

- Big rewrite of how data is extracted from Distutils/Setuptools.


1.8.3 (2015-11-08)
------------------

- Issue #26: Checking a PyPI package could fail under Python 3.

1.8.2 (2015-06-14)
------------------

- Do not complain that the version number should be a string, when it
  is a basestring.
  [maurits]


1.8.1 (2015-04-27)
------------------

- This is what happens when you don't run the tests after merging.


1.8 (2015-04-27)
----------------

- More robust rating. [Jeff Quast]

- Closed #24.


1.7 (2014-10-19)
----------------

- Package name lookup is now case insensitive. [Dmitry Vakhrushev]

- Fixed yet another error in return value. [Dmitry Vakhrushev]


1.6 (2014-04-17)
----------------

- Fixed issue #17: Integration with zest.releaser stopped working.

- Fixed issue #18: Pyroma returns the rating as an exit code, this was a
  mistake. It now returns 0 on success, 1 on incorrect options and 2 if
  the rating is below 8.

- Fixed issue #19: Implementing a custom test class counts as having tests.
