@@ -341,7 +341,7 @@
 
  <a href="#downloads">Downloads &darr;</a>
     |
-   <a href="http://pythonhosted.org/complete">Package Documentation</a>
+   <a href="http://complete.readthedocs.org/">Package Documentation</a>
 </p>
 
 
@@ -437,7 +437,7 @@ Installing and using complete for Python 3 code works exactly
 the same as for Python 2 code, but complete also helps you to support
 Python 2 and Python 3 from the same source code by letting you run 2to3
 on the code as a part of the build process, by setting the keyword parameter
-<tt class="docutils literal">use_2to3</tt> to True. See <a class="reference external" href="http://pythonhosted.org/complete">http://pythonhosted.org/complete</a> for more
+<tt class="docutils literal">use_2to3</tt> to True. See <a class="reference external" href="http://complete.readthedocs.org/">http://complete.readthedocs.org/</a> for more
 information.</p>
 </li>
 <li><p class="first">Refactoring the code, and releasing it in several distributions.
@@ -445,7 +445,7 @@ This work is being done in the 0.7.x series but not yet released.</p>
 </li>
 </ul>
 <p>The roadmap is still evolving, and the page that is up-to-date is
-located at : <cite>http://pythonhosted.org/complete/roadmap</cite>.</p>
+located at : <cite>http://complete.readthedocs.org//roadmap</cite>.</p>
 
 <p>If you install <cite>complete</cite> and want to switch back for any reason to
 <cite>Setuptools</cite>, get to the <a class="reference internal" href="#uninstallation-instructions">Uninstallation instructions</a> section.</p>
@@ -453,7 +453,7 @@ located at : <cite>http://pythonhosted.org/complete/roadmap</cite>.</p>
 <div class="section" id="more-documentation">
 <h3><a class="toc-backref" href="#id26">More documentation</a></h3>
 <p>You can get more information in the Sphinx-based documentation, located
-at <a class="reference external" href="http://pythonhosted.org/complete">http://pythonhosted.org/complete</a>. This documentation includes the old
+at <a class="reference external" href="http://complete.readthedocs.org/">http://complete.readthedocs.org/</a>. This documentation includes the old
 Setuptools documentation that is slowly replaced, and brand new content.</p>
 
 </div>
@@ -972,7 +972,7 @@ This closes <a class="reference external" href="http://bitbucket.org/tarek/compl
 
  <li>
   <strong>Documentation:</strong>
-  <a href="http://pythonhosted.org/complete">complete package documentation</a>
+  <a href="http://complete.readthedocs.org/">complete package documentation</a>
  </li>
 
 <!-- The <th> elements below are a terrible terrible hack for setuptools -->
@@ -980,7 +980,7 @@ This closes <a class="reference external" href="http://bitbucket.org/tarek/compl
 
   <strong>Home Page:</strong>
   <!-- <th>Home Page -->
-  <a href="http://pythonhosted.org/complete">http://pythonhosted.org/complete</a>
+  <a href="http://complete.readthedocs.org/">http://complete.readthedocs.org/</a>
  </li>
 
 
